# kaitabi-notification

./: AWSLambdaDockerfile  Dockerfile  README.md  app.py  docker-compose.yml  print_discord.py  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: fetch_kaitabi.yml
kaitabi_crawler/: crawl.py  items.py  middlewares.py  out.json  pipelines.py  settings.py
kaitabi_crawler/spiders/: kaitabi_spider.py
