[tool.poetry]
name = "kaitabi-notification"
authors = ["hoppiece"]
version = "0.1.0"
description = "Kaitabi notification bot"
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
Scrapy = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
